@@ -1,3 +1,13 @@
+2004-11-13  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/Makefile.am: Recurse into defs/.
+
+	* defs-extra-checks.ac: Deleted.
+
+	* gnome/defs/panel-applet.defs:
+	* gnome/defs/panel-applet-types.defs:
+	* gnome/defs/Makefile.am: New files, moved in from defs-extra.
+	
 2004-11-07  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
